@@ -1,5 +1,6 @@
 v1.4.5 (WIP)
 - Add multithreading support
+- Merge upstream mouse support
 
 v1.4.4 (2020-02-24)
 - Fix panic when navigating empty list
